--- a/src/main/resources/data_base.properties
+++ b/src/main/resources/data_base.properties
@@ -2,3 +2,4 @@ user=root
 password=1111
 serverTimezone=UTC
 url=jdbc:mysql://localhost:3306/medicine_centre?charsetEncoding=utf8
+driverName=com.mysql.cj.jdbc.Driver
