--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,4 +15,8 @@
         <filter-name>PageRedirectSecurityFilter</filter-name>
         <url-pattern>/jsp/*</url-pattern>
     </filter-mapping>
+    <filter-mapping>
+        <filter-name>CommandAccessFilter</filter-name>
+        <url-pattern>/controller</url-pattern>
+    </filter-mapping>
 </web-app>
